# CryptoAgent

./: .gitignore  .pre-commit-config.yaml  README.md  go.mod
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: contracts.yml  dashboard.yml  go.yml  python.yml
contracts/: README.md  foundry.toml
contracts/script/: DeployAuditAnchor.s.sol
contracts/src/: AuditAnchor.sol
contracts/test/: AuditAnchor.t.sol
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: AgentGraph.tsx  EventStream.test.tsx  EventStream.tsx  MerkleView.test.tsx  MerkleView.tsx
dashboard/src/hooks/: useAuditStream.ts  usePoll.ts
docs/: architecture.md  schema.md  sdk.md  signing_vectors.json  threat_model.md
go-key-service/: README.md  go.mod  go.sum
go-key-service/cmd/keyserver/: main.go
go-key-service/cmd/merkle-verify/: main.go
go-key-service/internal/action/: action.go  action_test.go
go-key-service/internal/anchor/: anchor.go  cast_parse.go  (+4 more)
sdk-python/: README.md  pyproject.toml
sdk-python/cryptoagent/: __init__.py  acl.py  action.py  decorators.py  langchain_integration.py  multisig.py  proposal.py  signing.py  tokens.py
sdk-python/examples/: langchain_agent.py
sdk-python/tests/: conftest.py  test_acl.py  test_action.py  test_decorators.py  test_e2e_success_metrics.py  test_interop.py  test_langchain.py  test_multisig.py  test_proposal.py  test_signing.py  test_tokens.py
(+46 files in other folders)
