[project]
name = "cryptoagent"
version = "0.1.0"
description = "CryptoAgent Python SDK — signed actions, multi-sig helpers, LangChain decorators"
requires-python = ">=3.11"
dependencies = [
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
langchain = [
    "langchain-core>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cryptoagent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
